cmake_minimum_required(VERSION 3.10)
project(jumpers)
set(CMAKE_CXX_STANDARD 20)  
cmake_policy(SET CMP0072 NEW)
find_package(Vulkan REQUIRED)
set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/source)
file(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}/*.cpp)
add_executable(jumpers ${SOURCE_FILES})
target_link_libraries(jumpers Vulkan::Vulkan)
